--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "hls.js": "^1.6.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
@@ -14,6 +15,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/hls.js": "^0.13.3",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8"
   },
@@ -23,4 +25,3 @@
     "preview": "vite preview"
   }
 }
-
