--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "远程抓娃娃服务前端",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
